/*
  ~ Copyright 2016 Claymore Minds Limited and Niche Solutions (UK) Limited
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
*/

option java_package = "io.viewserver.messages.protobuf.dto";
option java_outer_classname = "CommandMessage";

message CommandDto {
    required uint32 id = 1;
    required string command = 2;
    optional bytes data = 3;

    extensions 100 to max;
}

// 100 = AuthenticateCommandDto
// 200 = SubscribeCommandDto
// 201 = SubscribeReportCommandDto
// 202 = SubscribeDimensionCommandDto
// 203 = UpdateSubscriptionCommandDto
// 204 = UnsubscribeCommandDto
// 205 = TableEditCommandDto
// 300 = RegisterSlaveCommandDto
// 301 = InitialiseSlaveCommandDto
// 302 = RegisterDataSourceCommandDto
// 303 = UpdateDimensionMapCommandDto
// 304 = ConfiguratorDto
